--- a/www/css/global.css
+++ b/www/css/global.css
@@ -71,10 +71,21 @@ a:hover
   text-decoration: none;
 }
 
-#mainContainer
+a:active
+{
+	
+}
+
+#header
 {
 	width: 800px;
 	margin-top: 10px;
+}
+
+#main
+{
+  width: 800px;
+  margin-top: 10px;
 }
 
 .container
@@ -89,6 +100,96 @@ html
 	color: #999;
 	text-shadow: black 0px 1px 1px;
 	font-size: 12pt;
+}
+
+.dropdownContainer
+{
+  margin-bottom: 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+  padding-right: 6px;
+  width: auto;
+}
+
+.dropdown
+{
+  font-size: 1.1em;
+  border: 0px solid #fff;
+  width: auto;
+  color: #555;
+  padding-left: 0;
+  margin-left: 0;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.textfieldContainer
+{
+  margin-bottom: 15px;
+  padding: 0px;
+  padding-right: 5px;
+  width: auto;
+  background: #FBFBFB;
+  border: 2px solid #999;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+}
+
+.textfield
+{
+  font-size: 1.1em;
+  border: 0px solid #fff;
+  width: 300px;
+  color: #555;
+  padding-left: 3px;
+  margin-left: 3px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.textareaContainer
+{
+  margin-bottom: 15px;
+  padding: 0;
+  padding-right: 3px;
+  width: 406px;
+  height: auto;
+  background: #FBFBFB;
+  border: 2px solid #999;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+}
+
+.textarea
+{
+  font-size: 1em;
+  border: 0px solid #fff;
+  width: 400px;
+  height: 55px;
+  color: #555;
+  padding-left: 3px;
+  margin-left: 3px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.label
+{
+  font-size: 1.1em;
+}
+
+#submitButton
+{
+  float: right;
 }
 
 
@@ -225,6 +326,13 @@ html
 	float: right;
 }
 
+#sectionMenu
+{
+	text-align: right;
+	padding-right: 3px;
+	padding-top: 10px;
+}
+
 
 /* +----------------------------------------------------------------+ *\
 |* | PROJECTS                                                       | *|
@@ -295,8 +403,10 @@ html
 
 #projectListContainer
 {
+	text-align: left;
 	text-shadow: none;
 	color: #555;
+	padding-top: 30px;
 }
 
 .projectDraggableContainer
@@ -308,10 +418,6 @@ html
   padding-right: 10px;
   width: 600px;
   height: 44px;
-  background: #FBFBFB;
-  /*background: rgb(230,230,230);*/
-  /*background: rgb(124,196,0);*/
-  /*background: rgb(255,40,0);*/
   border: 2px solid #999;
   -webkit-border-radius: 16px 16px 16px 16px;
   -moz-border-radius: 16px 16px 16px 16px;
@@ -319,6 +425,13 @@ html
   box-shadow: 2px 2px 10px #111;
   -webkit-box-shadow: #111 2px 2px 10px;
   -moz-box-shadow: #111 2px 2px 10px;
+  /*background: rgb(230,230,230);*/
+  /*background: rgb(124,196,0);*/
+  /*background: rgb(255,40,0);*/
+  background: #FBFBFB; /* non-CSS3 */
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #fff), color-stop(0.6, #ddd), color-stop(0.9, #bbb)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%); /* for firefox 3.6+ */
 }
 
 .projectDraggableContainer .projectLink
@@ -330,6 +443,12 @@ html
   margin: 0;
   width: 600px;
   height: 44px;
+}
+
+#newProjectContainer
+{
+  width: 350px;
+  margin-bottom: 80px;
 }
 
 
