--- a/www/css/global.css
+++ b/www/css/global.css
@@ -585,7 +585,7 @@ article#project #statusContainer .status
 #projectViewContainer
 {
 	float: left;
-	margin-top: 50px;
+	margin-top: 15px;
 }
 
 #projectViewContainer #rawOutput
@@ -615,6 +615,33 @@ article#project #statusContainer .status
   box-shadow: 2px 2px 10px #111;
   -webkit-box-shadow: #111 2px 2px 10px;
   -moz-box-shadow: #111 2px 2px 10px;
+}
+
+#projectViewContainer .buildResultPane
+{
+	display: none;
+}
+
+#projectSectionsLinks
+{
+	width: 100%;
+	float: left;
+	text-align: center;
+	margin-top: 15px;
+	font-size: 1.04em;
+}
+
+#projectSectionsLinks ul
+{
+	float: left;
+	text-align: center;
+}
+
+#projectSectionsLinks li
+{
+	float: left;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 #newProjectContainer
