Now storing the SCM revision associated with a project build. Fixed fatal error right after creating a project. Project details now correctly show latest build's revision, number and outcome. Properly shielded the project view from situations where builds hadn't been triggered. Several layout improvements.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -404,6 +404,11 @@ article#project .details #buildsList
   clear: none;
 }
 
+article#project .details #buildsList #buildsListDropdown
+{
+	font-size: .9em;
+}
+
 article#project .details #buildsList .label
 {
   font-size: .9em;
