Added more strict validation to installation process

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -777,3 +777,8 @@ article#project .user .username
   -webkit-box-shadow: 0px 0px 8px #222;
   cursor: pointer;
 }
+
+#installer .mandatory
+{
+  border: 1px solid #7A5559;
+}
