--- a/www/css/global.css
+++ b/www/css/global.css
@@ -58,11 +58,6 @@ a:hover
   text-decoration: none;
 }
 
-a:active
-{
-	
-}
-
 #header
 {
 	margin-top: 10px;
@@ -82,36 +77,42 @@ a:active
 	clear: both;
 }
 
-#mainMenu ul li
+#mainMenu ul
 {
-	font-variant: small-caps;
-	font-size: 1.1m;
-	color: #555;
-	/*text-shadow: none;*/
-	text-shadow: #fff 1px 1px 1px;
-	border-top: 2px solid #999;
-	border-bottom: 2px solid #999;
-	float: left;
-	margin: 0;
-	padding-left: 9px;
-	padding-right: 10px;
-	padding-top: 5px;
-	padding-bottom: 4px;
 	box-shadow: 2px 2px 10px #111;
   -webkit-box-shadow: #111 2px 2px 10px;
   -moz-box-shadow: #111 2px 2px 10px;
-  /*background: rgb(230,230,230);*/
-  /*background: rgb(124,196,0);*/
-  /*background: rgb(255,40,0);*/
-  background: #FBFBFB; /* non-CSS3 */
-  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd'); /* for IE */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #fff), color-stop(0.6, #ddd)/*, color-stop(0.9, #bbb)*/); /* for webkit browsers */
-  background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%); /* for firefox 3.6+ */
+  float: left;
+  -webkit-border-radius: 6px 6px 6px 6px;
+  -moz-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px;
+}
+
+#mainMenu ul li
+{
+  font-variant: small-caps;
+  font-size: 1.1m;
+  color: #fff;
+  text-shadow: #303030 1px 1px 1px;
+  border-right: 1px solid #333;
+  border-left: 1px solid #bbb;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+  float: left;
+  margin: 0;
+  padding-left: 9px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 4px;
+  background: #999;
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd');
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #999), color-stop(0.6, #666), color-stop(0.9, #555));
+  background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%);
 }
 
 #mainMenu ul li:first-child
 {
-  border-left: 2px solid #bbb;
+  border-left: 1px solid #bbb;
   -webkit-border-radius: 6px 0px 0px 6px;
   -moz-border-radius: 6px 0px 0px 6px;
   border-radius: 6px 0px 0px 6px;
@@ -119,36 +120,46 @@ a:active
 
 #mainMenu ul li:last-child
 {
-	border-right: 2px solid #bbb;
+  border-right: 1px solid #bbb;
   -webkit-border-radius: 0px 6px 6px 0px;
   -moz-border-radius: 0px 6px 6px 0px;
   border-radius: 0px 6px 6px 0px;
 }
 
+/*
+#mainMenu ul li
+{
+  font-variant: small-caps;
+  font-size: 1.1m;
+  color: #555;
+  text-shadow: #fff 1px 1px 1px;
+  border-right: 1px solid #aaa;
+  border-left: 1px solid #fff;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+  float: left;
+  margin: 0;
+  padding-left: 9px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 4px;
+  background: #FBFBFB;
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd');
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #fff), color-stop(0.6, #ddd));
+  background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%);
+}
+*/
+
 #mainMenu #sectionName
 {
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-variant: small-caps;
 }
 
 #mainMenu .sectionTopOptions
 {
 	
-}
-
-#menuLeft
-{
-	/*font-family: Orbitron,"Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
-	letter-spacing: 1px;*/
-	font-size: 1.3em;
-	float: left;
-}
-
-#menuRight
-{
-	margin-top: 5px; /* compensate for menuLeft's bigger font-size */
-  float: right;
 }
 
 .containerTopLevel
@@ -197,6 +208,7 @@ html
   margin-left: 0;
   margin-top: 3px;
   margin-bottom: 3px;
+  /*outline: none;*/
 }
 
 .fineprintLabel
@@ -278,6 +290,7 @@ html
   margin-left: 3px;
   margin-top: 3px;
   margin-bottom: 3px;
+  outline: none;
 }
 
 .textareaContainer
@@ -308,6 +321,7 @@ html
   margin-left: 3px;
   margin-top: 3px;
   margin-bottom: 3px;
+  outline: none;
 }
 
 .label
@@ -580,15 +594,23 @@ article#project #statusContainer .status
   width: auto;
 }
 
+.projectStatusContainer
+{
+  float: left;
+  width: 45px;
+  margin-top: 5px;
+  margin-left: 2px;
+}
+
 .projectStatus
 {
   float: left;
   margin-top: 2px;
-  width: 20px;
-  height: 20px;
-  -webkit-border-radius: 10px 10px 10px 10px;
-  -moz-border-radius: 10px 10px 10px 10px;
-  border-radius: 10px 10px 10px 10px;
+  width: 30px;
+  height: 30px;
+  -webkit-border-radius: 15px 15px 15px 15px;
+  -moz-border-radius: 15px 15px 15px 15px;
+  border-radius: 15px 15px 15px 15px;
 }
 
 .projectStatusOk
@@ -706,24 +728,30 @@ article#project #statusContainer .status
 
 #projectSectionsLinks
 {
+	/*
 	width: 100%;
 	float: left;
 	text-align: center;
 	margin-top: 15px;
 	font-size: 1.04em;
+	*/
 }
 
 #projectSectionsLinks ul
 {
+	/*
 	float: left;
 	text-align: center;
+	*/
 }
 
 #projectSectionsLinks li
 {
+	/*
 	float: left;
 	margin-left: 20px;
 	margin-right: 20px;
+	*/
 }
 
 #newProjectContainer
